# Multi-Scale-Volatility

./: .gitignore  Documentation.md  Memo.md  README.md  pyproject.toml
data/baselines/: baselines_report.json
data/final/: truncation_report.json
data/metatrader/HISTDATA_COM_MT_EURUSD_M12025/: DAT_MT_EURUSD_M1_2025.txt
results/entropy/: entropy_gaps.csv  layer_entropy.csv
results/volatility/: layer_volatility.csv  volatility_report.json
scripts/: run_all.py  run_baselines.py  run_decomposition.py  run_decomposition_plots.py  run_eda_plots.py  run_entropy.py  run_entropy_plots.py  run_length_standardization.py  run_memo_plots.py  run_preprocessing.py  run_volatility.py  run_volatility_plots.py
src/: baselines.py  cli.py  decomposition.py  entropy.py  length_standardization.py  pipeline.py  plots.py  preprocessing.py  scale_utils.py  volatility.py
src/config/: bundles.py  constants.py  schemas.py
src/globals/: constants.py  paths.py
src/multi_scale_volatility/: baselines.py  cli.py  components.py  decomposition.py  entropy.py  length_standardization.py  pipeline.py  scale_utils.py  volatility.py
src/multi_scale_volatility/config/: __init__.py  bundles.py  metric_columns.py  path_utils.py  schemas.py
src/multi_scale_volatility/plotting/: decomposition.py  eda.py  (+5 more)
src/plotting/: decomposition.py  eda.py  entropy.py  memo.py  primitives.py  readers.py  style.py  volatility.py
src/preprocessing/: __init__.py  cleaning.py  paths.py  pipeline.py  raw.py  resampling.py  returns.py
src/stats/: __init__.py  autocorrelation.py
src/utils/: json_utils.py
(+31 files in other folders)
