[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "volatility-entropy"
version = "0.1.0"
description = "Multi-scale volatility and entropy analysis for EUR/USD returns."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy==2.4.4",
  "pandas==3.0.2",
  "matplotlib==3.10.9",
]

[project.scripts]
ve = "multi_scale_volatility.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["multi_scale_volatility*"]
